

* Sie können jetzt in BlueXP nach Dokumentation suchen. Suchergebnisse enthalten nun Links zu Inhalten auf docs.netapp.com und kb.netapp.com, die Ihnen bei der Beantwortung Ihrer Frage helfen könnten.
+
image:https://raw.githubusercontent.com/NetAppDocs/cloud-manager-setup-admin/main/media/screenshot-search-docs.png["Ein Screenshot der BlueXP Suche, die oben in der Konsole verfügbar ist"]

* Der Connector wird nun in den folgenden AWS Regionen unterstützt:
+
** Hyderabad (AP-Süd-2)
** Melbourne (AP-Südost-4)
** Spanien (eu-Süd-2)
** VAE (ME-Central-1)
** Zürich (eu-Zentral-2)


* Der Connector wird nun in den folgenden Azure-Regionen unterstützt:
+
** Brasilien Süd
** Frankreich Süd
** Jio India Central
** Jio Indien Westen
** Polen, Mitte
** Qatar Central


* Der Connector wird nun in folgenden Google Cloud Regionen unterstützt:
+
** Columbus (USA-öst5)
** Dallas (USA-Süd-1)


+
https://cloud.netapp.com/cloud-volumes-global-regions["Hier finden Sie die vollständige Liste der unterstützten Regionen"^]





== 7 Mai 2023



=== Anschluss 3.9.29

* Ubuntu 22.04 ist das neue Betriebssystem für den Connector, wenn Sie einen Connector von BlueXP oder vom Marktplatz Ihres Cloud-Providers bereitstellen.
+
Sie haben auch die Möglichkeit, den Connector manuell auf Ihrem eigenen Linux-Host zu installieren, auf dem Ubuntu 22.04 ausgeführt wird.

* Red hat Enterprise Linux 8.6 und 8.7 werden bei neuen Connector-Implementierungen nicht mehr unterstützt.
+
Diese Versionen werden bei neuen Bereitstellungen nicht unterstützt, da Red hat Docker nicht mehr unterstützt, was für den Connector erforderlich ist. Wenn Sie bereits einen Connector mit RHEL 8.6 oder 8.7 verwenden, unterstützt NetApp Ihre Konfiguration weiterhin.

+
Red hat 7.6, 7.7, 7.8 und 7.9 werden weiterhin von neuen und vorhandenen Connectors unterstützt.

* Der Connector wird jetzt in der Region Katar in Google Cloud unterstützt.
* Der Connector wird auch in der Region Sweden Central in Microsoft Azure unterstützt.