@@ -191,7 +191,7 @@ sidebar:
       entries:
       - title: Amazon S3 Buckets managen
         url: "/task-viewing-amazon-s3.html"
-      - title: Zeigen Sie Ihre Azure Blob Konten an
+      - title: Azure Blob-Konten managen
         url: "/task-viewing-azure-blob.html"
       - title: Zeigen Sie Ihre Google Cloud Storage Buckets an
         url: "/task-viewing-gcp-storage.html"
