@@ -4,7 +4,7 @@ permalink: task-viewing-azure-blob.html
 keywords: blob storage, blob working environment, azure blob storage accounts, azure blob working environment 
 summary: Nach der Installation eines Connectors in Azure erkennt BlueXP automatisch Informationen zu den Azure Storage-Konten, die sich in den Azure-Abonnements befinden, in denen der Connector installiert ist. Eine Azure Blob Arbeitsumgebung wird dem Canvas hinzugefügt, damit Sie diese Informationen anzeigen können. 
 ---
-= Zeigen Sie Ihre Azure Blob Konten an
+= Azure Blob-Konten managen
 :hardbreaks:
 :allow-uri-read: 
 :nofooter: 
@@ -16,27 +16,8 @@ summary: Nach der Installation eines Connectors in Azure erkennt BlueXP automati
 [role="lead"]
 Nach der Installation eines Connectors in Azure erkennt BlueXP automatisch Informationen zu den Azure Storage-Konten, die sich in den Azure-Abonnements befinden, in denen der Connector installiert ist. Eine Azure Blob Arbeitsumgebung wird dem Canvas hinzugefügt, damit Sie diese Informationen anzeigen können.
 
-Sie sehen Details zu Ihren Azure Storage-Konten, einschließlich Standort, Ressourcengruppe, Gesamt- und genutzter Kapazität und mehr. Diese Konten können als Ziele für BlueXP Backup und Recovery, BlueXP Tiering oder BlueXP Kopier- und Synchronisierungsvorgänge verwendet werden.
-
-.Schritte
-. Installieren Sie einen Connector im Azure-Konto, in dem Sie Ihre Azure-Storage-Konten anzeigen möchten.
-. Wählen Sie im Navigationsmenü die Option *Storage > Canvas* aus.
-+
-Kurz danach wird eine Azure Blob Arbeitsumgebung bereitgestellt.
-
-+
 image:screenshot-azure-blob-we.png["Ein Screenshot einer Azure Blob Arbeitsumgebung"]
 
-. Wählen Sie die Arbeitsumgebung aus, und wählen Sie im rechten Fensterbereich eine Aktion aus.
-+
-image:screenshot-azure-actions.png["Ein Screenshot, der das Teilfenster „Aktionen“ zeigt, nachdem Sie eine Azure Blob Arbeitsumgebung ausgewählt haben Im Bereich werden die Gesamtzahl der Speicherkonten und eine Aktion für die Verwendung des Sync-Service angezeigt."]
+Sie sehen Details zu Ihren Azure Storage-Konten, einschließlich Standort, Ressourcengruppe, Gesamt- und genutzter Kapazität und mehr. Diese Konten können als Ziele für BlueXP Backup und Recovery, BlueXP Tiering oder BlueXP Kopier- und Synchronisierungsvorgänge verwendet werden.
 
-. Wählen Sie *Sync Data* aus, um Daten mit oder aus Azure Blob Storage zu synchronisieren.
-+
-Weitere Informationen finden Sie unter https://docs.netapp.com/us-en/bluexp-copy-sync/concept-cloud-sync.html["Übersicht über die BlueXP Kopier- und Synchronisierungsfunktion"^]
-
-. Wählen Sie *Arbeitsumgebung eingeben*, um Details über die Azure-Speicherkonten in Ihren Azure-Blobs anzuzeigen.
-+
-image:screenshot-azure-blob-details.png["Ein Screenshot, der die Details einer Azure Blob Arbeitsumgebung zeigt, wie viele Storage-Konten insgesamt, Standorte, Ressourcengruppen, die gesamte und genutzte Kapazität usw."]
-
-
+Mit einer neu hinzugefügten Funktion können Sie jetzt Azure-Speicherkonten erstellen und bearbeiten. https://docs.netapp.com/us-en/bluexp-blob-storage/index.html["Informieren Sie sich hier, wie Sie Ihre Azure Storage-Konten mit BlueXP anzeigen, erstellen und managen können"^].
